--- a/package.json
+++ b/package.json
@@ -16,4 +16,5 @@
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
-    "@vue/cli-plugin
+    "@vue/cli-plugin-eslint": "~4.4.0",
+    "@vue/cli-plugi
