--- a/package.json
+++ b/package.json
@@ -19,4 +19,5 @@
     "@vue/cli-plugin-eslint": "~4.4.0",
     "@vue/cli-plugin-router": "~4.4.0",
     "@vue/cli-plugin-vuex": "~4.4.0",
-    "@vue/cli-service": "~4.4
+    "@vue/cli-service": "~4.4.0",
+    "@vue/eslint-config-prettier": 
