--- a/package.json
+++ b/package.json
@@ -22,4 +22,5 @@
     "@vue/cli-service": "~4.4.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
-   
+    "eslint": "^6.7.2",
+    "eslint-plugin-pretti
