--- a/package.json
+++ b/package.json
@@ -26,4 +26,6 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
     "prettier": "^1.19.1",
-    "vue-template-co
+    "vue-template-compiler": "^2.6.11"
+  },
+  "eslintConfig": {
