Maven artifacts for The Knowledge Representation Interface version 1.1.4-SNAPSHOT

--- a/package.json
+++ b/package.json
@@ -37,4 +37,6 @@
       "plugin:vue/essential",
       "eslint:recommended",
       "@vue/prettier"
-    
+    ],
+    "parserOptions": {
+      "parser": "babel-
